--- a/src/OnlineShop/OnlineShop.Client/App.xaml
+++ b/src/OnlineShop/OnlineShop.Client/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:OnlineShop.Client"
              StartupUri="Views/AuthenticationWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Controls/FlatButtonStyle.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
