--- a/src/OnlineShop/OnlineShop.Client/Views/AuthenticationWindow.xaml
+++ b/src/OnlineShop/OnlineShop.Client/Views/AuthenticationWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:OnlineShop.Client.Controls"
         xmlns:local="clr-namespace:OnlineShop.Client.Views"
         mc:Ignorable="d"
-        Title="Online shop - Sign in" Icon="/OnlineShop.Client;component/Images/AppIcon.ico" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Width="500" Height="300" FontSize="14" Closing="Window_Closing">
+        Title="Online shop - Sign in" Icon="/OnlineShop.Client;component/Images/AppIcon.ico" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Width="500" Height="300" FontSize="14" Closing="Window_Closing" Background="WhiteSmoke">
     <Window.Resources>
         <viewModels:ViewModelLocator x:Key="locator"></viewModels:ViewModelLocator>
     </Window.Resources>
@@ -44,8 +44,8 @@
                 <PasswordBox Grid.Row="1" Grid.Column="1" Margin="5" VerticalAlignment="Top" controls:PasswordBoxAssistant.BindPassword="true" controls:PasswordBoxAssistant.BoundPassword="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" TabIndex="1"></PasswordBox>
             </Grid>
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-                <Button Padding="16, 0" Margin="5" Command="{Binding SignInCommand, Mode=OneWay}" IsDefault="True" TabIndex="2">Sign in</Button>
-                <Button Padding="16, 0" Margin="5" Command="{Binding CloseCommand, Mode=OneWay}" TabIndex="3">Close</Button>
+                <Button Padding="24, 5" Margin="5" Command="{Binding SignInCommand, Mode=OneWay}" IsDefault="True" TabIndex="2">Sign in</Button>
+                <Button Padding="24, 5" Margin="5" Command="{Binding CloseCommand, Mode=OneWay}" TabIndex="3">Close</Button>
             </StackPanel>
         </Grid>
         <controls:BusyLoader IsLoading="{Binding IsBusy}"/>
