--- a/src/OnlineShop/OnlineShop.Client/Views/EditOrderWindow.xaml
+++ b/src/OnlineShop/OnlineShop.Client/Views/EditOrderWindow.xaml
@@ -39,7 +39,7 @@
                 <TextBlock Margin="0,0,10,0">Search:</TextBlock>
                 <TextBox Name="searchTextBox" Grid.Column="1" Text="{Binding SearchString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             </Grid>
-            <DataGrid Name="orderItemList" Grid.Row="1" Margin="10" CanUserAddRows="False" CanUserDeleteRows="False" ItemsSource="{Binding OrderItems}" AutoGenerateColumns="False" SelectionMode="Single">
+            <DataGrid Name="orderItemList" Grid.Row="1" Margin="10" CanUserAddRows="False" CanUserDeleteRows="False" ItemsSource="{Binding OrderItems}" AutoGenerateColumns="False" SelectionMode="Single" CellEditEnding="orderItemList_CellEditEnding">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridRow}">
                         <Setter Property="ValidationErrorTemplate">
@@ -57,12 +57,15 @@
                             </DataTrigger>
                             <DataTrigger Binding="{Binding DataContext.Order.Status, ElementName=grid}" Value="{x:Static dto:StatusDto.Cancelled}">
                                 <Setter Property="IsEnabled" Value="False"></Setter>
+                                <Setter Property="Foreground" Value="Black"></Setter>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding DataContext.Order.Status, ElementName=grid}" Value="{x:Static dto:StatusDto.Confirmed}">
                                 <Setter Property="IsEnabled" Value="False"></Setter>
+                                <Setter Property="Foreground" Value="Black"></Setter>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding DataContext.Order.Status, ElementName=grid}" Value="{x:Static dto:StatusDto.Processing}">
                                 <Setter Property="IsEnabled" Value="False"></Setter>
+                                <Setter Property="Foreground" Value="Black"></Setter>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -71,21 +74,15 @@
                     <DataGridCheckBoxColumn Binding="{Binding IsChecked}" CellStyle="{Binding Mode=OneWay, Source={StaticResource readOnlyControl}}"></DataGridCheckBoxColumn>
                     <DataGridTextColumn Header="Name" Binding="{Binding Item.Product.Name}" IsReadOnly="True"></DataGridTextColumn>
                     <DataGridTextColumn Header="Price" Binding="{Binding Item.Product.Price.Price, StringFormat=C, ConverterCulture=en-US}" IsReadOnly="True"></DataGridTextColumn>
-                    <DataGridTemplateColumn Header="Quantity">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBox LostFocus="QuantityTextBox_LostFocus" Style="{Binding Mode=OneWay, Source={StaticResource readOnlyControl}}">
-                                    <TextBox.Text>
-                                        <Binding Path="Item.Quantity" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">
-                                            <Binding.ValidationRules>
-                                                <validators:QuantityValidator></validators:QuantityValidator>
-                                            </Binding.ValidationRules>
-                                        </Binding>
-                                    </TextBox.Text>
-                                </TextBox>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
+                    <DataGridTextColumn Header="Quantity" CellStyle="{Binding Mode=OneWay, Source={StaticResource readOnlyControl}}" >
+                        <DataGridTextColumn.Binding>
+                            <Binding Path="Item.Quantity" Mode="TwoWay" UpdateSourceTrigger="LostFocus" ValidatesOnDataErrors="True">
+                                <Binding.ValidationRules>
+                                    <validators:QuantityValidator></validators:QuantityValidator>
+                                </Binding.ValidationRules>
+                            </Binding>
+                        </DataGridTextColumn.Binding>
+                    </DataGridTextColumn>
                     <DataGridTextColumn Header="Total" Binding="{Binding Item.TotalPrice, StringFormat=C, ConverterCulture=en-US}" IsReadOnly="True"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
