--- a/src/OnlineShop/OnlineShop.Client/Views/AdminOrdersWindow.xaml
+++ b/src/OnlineShop/OnlineShop.Client/Views/AdminOrdersWindow.xaml
@@ -29,6 +29,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
@@ -40,7 +41,20 @@
             <TextBlock Margin="0,0,10,0">Search:</TextBlock>
             <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         </Grid>
-        <ListView Grid.Row="1" Margin="10,5" ItemsSource="{Binding Orders}" SelectedItem="{Binding SelectedOrder}">
+        <Grid Grid.Row="1" Margin="10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" MinWidth="54"></ColumnDefinition>
+                <ColumnDefinition Width="156"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Margin="0,0,10,0" Text="Status filter:"/>
+            <ComboBox Height="26" Grid.Column="1" Margin="0,-4,0,4" VerticalAlignment="Center" ItemsSource="{Binding StatusesObsCol}" SelectedItem="{Binding SelectedStatus}">
+                <Label>NotDecorated</Label>
+                <Label>Processing</Label>
+                <Label>Confirmed</Label>
+                <Label>Cancelled</Label>
+            </ComboBox>
+        </Grid>
+        <ListView Grid.Row="2" Margin="10,5" ItemsSource="{Binding OrdersObsCol}" SelectedItem="{Binding SelectedOrder}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
                     <i:InvokeCommandAction Command="{Binding EditOrderCommand, Mode=OneWay}"/>
@@ -56,7 +70,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
             <Button Padding="24, 5" Margin="5" Content="Details" Command="{Binding AdminOrderDetailsCommand, Mode=OneWay}">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}"></Style>
